fix: wrap cards

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -62,9 +62,8 @@ li{
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  margin: 16px;
-  padding: 10px;
-  flex-wrap: wrap;
+  padding: 16px;
+  width: 300px;
 }
 
 .content{
@@ -75,4 +74,6 @@ li{
 .cards{
   display: flex;
   padding: 48px;
+  flex-wrap: wrap;
+  gap: 32px;
 }
